tests/ui/imports/import3.stderr
error[E0432]: unresolved import `main`
  --> $DIR/import3.rs:1:5
   |
LL | use main::bar;
   |     ^^^^ function `main` is not a crate or module

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0432`.
